# event-management-backend

./: .gitignore  README.md  pyproject.toml
eventmanagement/: Dockerfile  docker-compose.yml  pytest.ini  requirements.txt
eventmanagement/authentication/: urls.py  views.py
eventmanagement/eventmanagement/: asgi.py  settings.py  urls.py  wsgi.py
eventmanagement/events/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
eventmanagement/events/migrations/: 0001_initial.py
eventmanagement/reservations/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
eventmanagement/reservations/migrations/: 0001_initial.py
eventmanagement/reservations/tests/: test_concurrent_reservation.py  test_reservations.py
